<resources>
    <string name="app_name">Broccoli &amp; Co.</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="email_invitation_fragment_label">Email Invitation</string>

    <string name="broccoli_co_title">Broccoli &amp; Co.</string>
    <string name="broccoli_co_description">Please tap the button below to request an invitation to our service</string>
    <string name="registered">Registered</string>
    <string name="not_registered">Not Registered</string>
    <string name="button_settings">Settings</string>

    <string name="broccoli_co_invited_description">You are currently registered to our service. Tap the button below to cancel</string>

    <string name="name_hint">Full Name</string>
    <string name="email_hint">Email Address</string>
    <string name="confirm_email_hint">Confirm Email Address</string>
    <string name="name_validation_hint">Name must be more than 3 characters</string>
    <string name="email_validation_hint">Must be a valid email address</string>
    <string name="confirm_email_validation_hint">Email address is not matching</string>
    <string name="send_details_generic_error">There was an error please try again</string>

    <string name="button_request_invite">Request Invite</string>
    <string name="button_cancel_invite">Cancel Invite</string>

    <string name="button_send_user_details">Send</string>
    <string name="button_confirm_cancel">Yes cancel my invitation</string>
    <string name="button_cancel">No keep my invitation</string>
    <string name="cancel_invite_title">Confirm invitation cancellation</string>
    <string name="cancel_invite_description">Are you sure you want to cancel? You can request another invitation from the home page</string>

    <string name="image_accessibility_description">Success Image</string>
    <string name="success_title">Congratulations you are now invited!</string>
    <string name="cancel_title">Invitation successfully cancelled</string>
    <string name="button_success">Done</string>

</resources>